tests/baselines/reference/parserES5ComputedPropertyName11.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts(2,4): error TS1168: Computed property names are not allowed in method overloads.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts (1 errors) ====
    class C {
       [e]();
       ~~~
!!! error TS1168: Computed property names are not allowed in method overloads.
    }